server/crates/djinn-control-plane/tests/snapshots/evidence_findings_contract__evidence_judge_partial_timeout.snap
---
source: crates/djinn-control-plane/tests/evidence_findings_contract.rs
expression: rendered
---
Evidence completion: partial
plan_id=<plan-id> captured_commit_sha=captured-contract-commit worktree_fingerprint=captured-contract-worktree
check code [code] terminal=true health=ok
check graph [graph] terminal=true health=ok
check command [command] terminal=true health=timeout
gap: command: timeout
finding code: the production submit seam owns finalization anchor={"kind":"code","path":"server/crates/djinn-slot/src/finalize_handlers.rs","end_line":169,"start_line":112,"captured_commit_sha":"captured-contract-commit"}
finding graph: the finalizer resolves through the control-plane node anchor={"kind":"graph","node_id":"rust:handle_submit_work","graph_identity":"captured-contract-commit"}
finding command: the immutable command event supplies process health anchor={"argv":["cargo","test","-p","djinn-control-plane","evidence_findings_contract"],"kind":"command","health":"timeout","signal":null,"exit_code":0,"timed_out":true,"finished_at":"2026-01-02T03:04:06Z","launched_at":"2026-01-02T03:04:05Z","launch_state":"launched","canonical_cwd":"/workspace/djinn/server","invocation_id":"<invocation-id>","process_state":"timed_out","stderr_digest":"sha256:stderr-contract-digest","stdout_digest":"sha256:stdout-contract-digest","elapsed_millis":1000,"runner_failure":null,"stderr_excerpt":"contract stderr excerpt","stdout_excerpt":"contract stdout excerpt","timeout_millis":30000,"stderr_truncated":false,"stdout_truncated":true}
