server/crates/djinn-control-plane/tests/snapshots/evidence_findings_contract__evidence_judge_unresolved.snap
---
source: crates/djinn-control-plane/tests/evidence_findings_contract.rs
expression: rendered
---
Evidence completion: unresolved
No anchored findings were established; this is not positive evidence.
check code [code] terminal=true health=ok
check graph [graph] terminal=true health=ok
check command [command] terminal=true health=not_run
gap: command: not_run
